[gd_scene load_steps=5 format=3 uid="uid://83k0m2ridurs"]

[ext_resource type="Script" path="res://scenes/hangar.gd" id="1_3x4y5"]
[ext_resource type="Script" path="res://scenes/AttachmentPointMenu.gd" id="2_ix252"]
[ext_resource type="Script" path="res://scenes/NewShipDialogue.gd" id="3_h7kcl"]

[sub_resource type="PlaneMesh" id="PlaneMesh_jfjom"]

[node name="Hangar" type="Node3D"]
script = ExtResource("1_3x4y5")

[node name="ToastsContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 243.0
offset_top = 415.0
offset_right = 295.0
offset_bottom = 470.0

[node name="Toasts" type="VBoxContainer" parent="ToastsContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -158.0
offset_top = -466.0
offset_right = 158.0
offset_bottom = -171.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 60

[node name="CamPivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CamPivot"]
transform = Transform3D(-1, -1.77636e-15, -8.74228e-08, -2.13123e-08, 0.969829, 0.243784, 8.47852e-08, 0.243784, -0.969829, 0, 2.06177, -7.16436)
current = true

[node name="Ship" type="Node3D" parent="."]

[node name="ShipName" type="Label" parent="."]
offset_left = 146.0
offset_top = 583.0
offset_right = 335.0
offset_bottom = 620.0

[node name="Prev" type="Button" parent="."]
offset_left = 77.0
offset_top = 585.0
offset_right = 95.0
offset_bottom = 616.0
text = "<"

[node name="Next" type="Button" parent="."]
offset_left = 381.0
offset_top = 585.0
offset_right = 399.0
offset_bottom = 616.0
text = ">"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1.67452, 0, 0, 0, 1, 0, 0, 0, 1.65479, 0, -0.855535, 0)
mesh = SubResource("PlaneMesh_jfjom")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 531.0
offset_top = -8.0
offset_right = 829.0
offset_bottom = 644.0
color = Color(0, 0, 0, 1)

[node name="UpgradesContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Upgrades" type="VBoxContainer" parent="UpgradesContainer"]
layout_mode = 0
offset_left = 550.0
offset_top = 6.0
offset_right = 782.0
offset_bottom = 357.0
theme_override_constants/separation = 50

[node name="SelectedUpgrade" type="Button" parent="."]
offset_left = 536.0
offset_top = 365.0
offset_right = 706.0
offset_bottom = 417.0

[node name="SelectedUpgradeLabel" type="Label" parent="."]
offset_left = 705.0
offset_top = 368.0
offset_right = 823.0
offset_bottom = 417.0
text = "<- add selected
upgrade"

[node name="Credits" type="Label" parent="."]
offset_left = 6.0
offset_top = 2.0
offset_right = 303.0
offset_bottom = 115.0

[node name="AttachmentNodeMenu" type="Node" parent="."]
script = ExtResource("2_ix252")

[node name="RemoveAttachment" type="Button" parent="AttachmentNodeMenu"]
offset_left = 543.0
offset_top = 498.0
offset_right = 602.0
offset_bottom = 529.0
text = "Delete"

[node name="SelectedAttachmentPoint" type="Label" parent="AttachmentNodeMenu"]
offset_left = 651.0
offset_top = 498.0
offset_right = 766.0
offset_bottom = 521.0

[node name="ScrollContainer" type="ScrollContainer" parent="AttachmentNodeMenu"]
offset_left = 538.0
offset_top = 535.0
offset_right = 817.0
offset_bottom = 639.0

[node name="UpgradeData" type="VBoxContainer" parent="AttachmentNodeMenu/ScrollContainer"]
layout_mode = 2

[node name="NewShip" type="Button" parent="."]
offset_left = 418.0
offset_top = 530.0
offset_right = 512.0
offset_bottom = 580.0
text = "New Ship"

[node name="DeleteShip" type="Button" parent="."]
offset_left = 419.0
offset_top = 588.0
offset_right = 521.0
offset_bottom = 631.0
text = "Delete Ship"

[node name="NewShipDialogue" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 82.0
offset_top = 67.0
offset_right = 457.0
offset_bottom = 454.0
script = ExtResource("3_h7kcl")

[node name="Label" type="Label" parent="NewShipDialogue"]
layout_mode = 0
offset_left = 25.0
offset_top = 12.0
offset_right = 217.0
offset_bottom = 67.0
text = "Create a new ship"

[node name="ColorRect" type="ColorRect" parent="NewShipDialogue"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.258824)

[node name="Name" type="LineEdit" parent="NewShipDialogue"]
layout_mode = 0
offset_left = 32.0
offset_top = 71.0
offset_right = 333.0
offset_bottom = 126.0
text = "MyShip"
placeholder_text = "Ship name"
alignment = 1

[node name="Create" type="Button" parent="NewShipDialogue"]
layout_mode = 0
offset_left = 123.0
offset_top = 221.0
offset_right = 235.0
offset_bottom = 264.0
text = "Create"

[node name="Type" type="OptionButton" parent="NewShipDialogue"]
layout_mode = 0
offset_left = 42.0
offset_top = 150.0
offset_right = 329.0
offset_bottom = 195.0

[node name="Cancel" type="Button" parent="NewShipDialogue"]
layout_mode = 0
offset_left = 335.0
offset_right = 370.0
offset_bottom = 37.0
text = "X"

[connection signal="pressed" from="Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="SelectedUpgrade" to="." method="_on_selected_upgrade_pressed"]
[connection signal="pressed" from="AttachmentNodeMenu/RemoveAttachment" to="." method="_on_remove_attachment_pressed"]
[connection signal="pressed" from="NewShip" to="." method="_on_new_ship_pressed"]
[connection signal="pressed" from="DeleteShip" to="." method="_on_delete_ship_pressed"]
[connection signal="cancel" from="NewShipDialogue" to="." method="_on_new_ship_dialogue_cancel"]
[connection signal="create_new_ship" from="NewShipDialogue" to="." method="_on_new_ship_dialogue_create_new_ship"]
[connection signal="pressed" from="NewShipDialogue/Create" to="NewShipDialogue" method="_on_create_pressed"]
[connection signal="item_selected" from="NewShipDialogue/Type" to="NewShipDialogue" method="_on_type_item_selected"]
[connection signal="pressed" from="NewShipDialogue/Cancel" to="NewShipDialogue" method="_on_cancel_pressed"]
